fix(form): increase z-index to cover header button

--- a/src/css/components/form.css
+++ b/src/css/components/form.css
@@ -5,7 +5,7 @@
   width: 100vw;
   height: 100vh;
 
-  z-index: 100;
+  z-index: 1001;
   backdrop-filter: blur(8px);
   background-color: var(--background-color);
 
